--- a/Task 4/form.html
+++ b/Task 4/form.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+   <div class="wrapper">
     <h1>Welcome to our website</h1>
 
     <div class="slider-container">
@@ -31,6 +32,7 @@
     </div>
 
     <div id="message"></div>
+</div>
 
     <script src="script.js"></script>
 </body>
